--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>body { font-family: sans-serif; text-align: center; padding-top: 50px; }</style>
 </head>
 <body>
-    <h1>Pipeline de CI/CD Completado</h1>
+    <h1>Desplegado exitosamente CI-CD completo</h1>
     <p id="message">...</p>
     <script src="app.js"></script>
 </body>
